--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,5 +1,8 @@
 {% extends "learning_logs/base.html" %}
 
+
+
+
 {% block page_header %}
   <div class="jumbotron">
     <h1 class="display-3">Track your learning.</h1>
@@ -15,4 +18,44 @@
     {% endif %}
   
   </div>
+
+  <style>
+    .carousel-control-next,
+    .carousel-control-prev {
+      background-color: gray;
+      width: 5%;
+      opacity: .15;
+    }
+  </style>
+
+
+  <div class="jumbotron">
+    <h1 class="display-4 mb-4">For example:</h1>
+    {% load static %}
+
+
+    
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{% static 'slide1.png' %}" class="d-block w-100" alt="slide1">
+        </div>
+        <div class="carousel-item">
+          <img src="{% static 'slide2.png' %}" class="d-block w-100" alt="slide2">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
+
 {% endblock page_header %}
+
