--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -13,6 +13,6 @@
     {% buttons %}
       <button name="submit" class="btn btn-primary">Register</button>
     {% endbuttons %}
-    <input type="hidden" name="next" value="{% url 'learning_logs:topics' %}" />
+    <!-- <input type="hidden" name="next" value="{% url 'learning_logs:topics' %}" /> -->
   </form>
 {% endblock content %}
